@@ -1,3 +1,7 @@
+April 14, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>
+
+ * libpcsxcore/gte.c: Use u32 instead of unsigned long.
+
 April 13, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>
 
  * libpcsxcore/gte.c: Backported the new GTE code from PCSX-Revolution project
